# keepa

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  azurepipelines-coverage.yml  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_test.txt  setup.py  uploadpypi.sh
.github/workflows/: style.yml  testing-and-deployment.yml
docs/: Makefile
docs/source/: api_methods.rst  api_types.rst  async_client.rst  backend_model_reference.rst  backend_models.rst  category_queries.rst  conf.py  deal_queries.rst  index.rst  offer_queries.rst  product_data.rst  product_finder.rst  product_history.rst  product_query.rst  sync_client.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: enum.rst  pydantic_model.rst
keepa/: __init__.py  _version.py  interface.py  plotting.py  product_finder_keys.py  query_keys.py
keepaAPI/: Interface.py  Plotting.py  __init__.py  _version.py  interface.py  keepaTime.py  plotting.py
src/keepa/: __init__.py  constants.py  data_models.py  domain.py  interface.py  keepa_async.py  keepa_sync.py  plotting.py  query_keys.py  utils.py
src/keepa/models/: backend.py  domain.py  product_params.py  status.py
tests/: test_async_interface.py  test_backend_models.py  test_backend_schema.py  test_interface.py
utilities/: convert-to-pydantic.py  generate-backend-models.py
