[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "keepa"
dynamic = ["version"]
description = "Interfaces with keepa.com's API."
readme = "README.rst"
authors = [
    {name = "Alex Kaszynski", email = "akascap@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Database :: Front-Ends",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["keepa"]
dependencies = [
    "numpy >=1.9.3",
    "requests >=2.2",
    "tqdm",
    "aiohttp; python_version!='3.12.*'",
    "aiohttp==3.9.0b0; python_version=='3.12.*'",  # until aiohttp gets upgraded
    "pandas",
]

[project.urls]
Documentation = "https://keepaapi.readthedocs.io/en/latest/"
Source = "https://github.com/akaszynski/keepa"

[project.optional-dependencies]
test = [
    "matplotlib",
    "pandas",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
]
doc = [
    "sphinx==6.1.2",
    "pydata-sphinx-theme==0.14.2",
]

[tool.pytest.ini_options]
addopts = "--cov=keepa --cov-fail-under=85"

[tool.isort]
profile = 'black'
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|node_modules'
