[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3,<4"]

[mypy]
plugins = "pydantic.mypy"

[project]
authors = [
  {name = "Alex Kaszynski", email = "akascap@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Database :: Front-Ends",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "numpy >=1.9.3",
  "requests >=2.2",
  "tqdm",
  "aiohttp",
  "pandas <= 3.0",
  "pydantic"
]
description = "Interfaces with keepa.com's API."
dynamic = ["version"]
keywords = ["keepa"]
name = "keepa"
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
doc = [
  "sphinx==7.3.7",
  "pydata-sphinx-theme==0.15.4",
  "numpydoc==1.7.0"
]
test = [
  "matplotlib",
  "pandas",
  "pytest-asyncio",
  "pytest-cov",
  "pytest"
]

[project.urls]
Documentation = "https://keepaapi.readthedocs.io/en/latest/"
Source = "https://github.com/akaszynski/keepa"

[tool.pytest.ini_options]
addopts = "--cov=keepa --cov-fail-under=85"
asyncio_default_fixture_loop_scope = "function"
testpaths = 'tests'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = []
select = ["E", "F", "W", "I001"]  # pyflakes, pycodestyle, isort
