[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >=64", "setuptools-scm >=8"]

[project]
authors = [
  {name = "Alex Kaszynski", email = "akascap@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Database :: Front-Ends",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "numpy >=1.9.3",
  "requests >=2.2",
  "tqdm",
  "aiohttp",
  "pandas <= 3.0",
  "pydantic >=2"
]
description = "Interfaces with keepa.com's API."
dynamic = ["version"]
keywords = ["keepa"]
name = "keepa"
readme = "README.rst"
requires-python = ">=3.10"

[project.optional-dependencies]
doc = [
  "sphinx==8.1.3; python_version < '3.11'",
  "sphinx==8.2.3; python_version == '3.11'",
  "sphinx==9.1.0; python_version >= '3.12'",
  "pydata-sphinx-theme==0.19.0",
  "autodoc-pydantic==2.2.0",
  "sphinx-copybutton==0.5.2",
  "numpydoc==1.10.0",
  "tomli; python_version < '3.11'"
]
test = [
  "matplotlib",
  "pandas",
  "pytest-asyncio",
  "pytest-cov",
  "pytest",
  "pytest-rerunfailures"
]

[project.urls]
Documentation = "https://keepaapi.readthedocs.io/en/latest/"
Source = "https://github.com/akaszynski/keepa"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
addopts = "--cov=keepa --cov-fail-under=85"
asyncio_default_fixture_loop_scope = "function"
testpaths = 'tests'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = []
select = ["E", "F", "W", "I001"]  # pyflakes, pycodestyle, isort

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "1.5.0.dev0"
git_describe_command = "git describe --dirty --tags --long --match v*"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:[abrc][0-9]+)?(?:\\.post[0-9]+)?(?:\\.dev[0-9]+)?)$"
version_file = "src/keepa/_version.py"
